fixed bug with nav not appearing on mobile (     i think )

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -54,6 +54,8 @@ main {
 }
 
 .nav-section {
+    z-index: 4;
+    position: relative;
     display: flex;
     right: 0;
     color: white;
